--- a/SSD/Untitled.ipynb
+++ b/SSD/Untitled.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7280e80d",
+   "id": "ce0d65a7",
    "metadata": {},
    "outputs": [
     {
@@ -53,7 +53,7 @@
       "                'output_feature_sizes': '${anchors.feature_sizes}'},\n",
       "  'data_train': { 'dataloader': { '_target_': <class 'torch.utils.data.dataloader.DataLoader'>,\n",
       "                                  'batch_size': '${...train.batch_size}',\n",
-      "                                  'collate_fn': <function batch_collate at 0x7f1fc604e280>,\n",
+      "                                  'collate_fn': <function batch_collate at 0x7ff2ae442280>,\n",
       "                                  'dataset': '${..dataset}',\n",
       "                                  'drop_last': True,\n",
       "                                  'num_workers': 4,\n",
@@ -73,7 +73,7 @@
       "                                                                0.2878]}]}},\n",
       "  'data_val': { 'dataloader': { '_target_': <class 'torch.utils.data.dataloader.DataLoader'>,\n",
       "                                'batch_size': '${...train.batch_size}',\n",
-      "                                'collate_fn': <function batch_collate_val at 0x7f1fc604e4c0>,\n",
+      "                                'collate_fn': <function batch_collate_val at 0x7ff2ae4424c0>,\n",
       "                                'dataset': '${..dataset}',\n",
       "                                'num_workers': 4,\n",
       "                                'pin_memory': True,\n",
@@ -103,7 +103,7 @@
       "                 6: 'scooter',\n",
       "                 7: 'person',\n",
       "                 8: 'rider'},\n",
-      "  'loss_objective': { '_target_': <class 'ssd.modeling.focal_loss.SSDMultiboxLoss'>,\n",
+      "  'loss_objective': { '_target_': <class 'ssd.modeling.ssd_multibox_loss.SSDMultiboxLoss'>,\n",
       "                      'anchors': '${anchors}'},\n",
       "  'model': { '_target_': <class 'ssd.modeling.ssd.SSD300'>,\n",
       "             'anchors': '${anchors}',\n",
@@ -147,17 +147,11 @@
       "                         'transforms': [ { '_target_': <class 'ssd.data.transforms.transform.ToTensor'>},\n",
       "                                         { '_target_': <class 'ssd.data.transforms.transform.Resize'>,\n",
       "                                           'imshape': '${train.imshape}'}]}}\n",
-      "--------------------End of config file--------------------\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "--------------------End of config file--------------------\n",
       "/opt/conda/lib/python3.8/site-packages/torch/utils/data/dataloader.py:478: UserWarning: This DataLoader will create 4 worker processes in total. Our suggested max number of worker in current system is 2, which is smaller than what this DataLoader is going to create. Please be aware that excessive worker creation might get DataLoader running slow or even freeze, lower the worker number to avoid potential slowness/freeze if necessary.\n",
       "  warnings.warn(_create_warning_msg(\n",
       "loading annotations into memory...\n",
-      "Done (t=0.11s)\n",
+      "Done (t=0.10s)\n",
       "creating index...\n",
       "index created!\n",
       "\n",
@@ -192,24 +186,85 @@
       "feature_extractor:3                   -           -        [1, 256, 32, 256]  float32 \n",
       "feature_extractor:4                   -           -        [1, 256, 32, 256]  float32 \n",
       "feature_extractor:5                   -           -        [1, 256, 32, 256]  float32 \n",
-      "regression_heads.0                    55320       -        [1, 24, 32, 256]   float32 \n",
-      "classification_heads.0                124470      -        [1, 54, 32, 256]   float32 \n",
-      "regression_heads.1                    55320       -        [1, 24, 16, 128]   float32 \n",
-      "classification_heads.1                124470      -        [1, 54, 16, 128]   float32 \n",
-      "regression_heads.2                    55320       -        [1, 24, 8, 64]     float32 \n",
-      "classification_heads.2                124470      -        [1, 54, 8, 64]     float32 \n",
-      "regression_heads.3                    55320       -        [1, 24, 4, 32]     float32 \n",
-      "classification_heads.3                124470      -        [1, 54, 4, 32]     float32 \n",
-      "regression_heads.4                    36880       -        [1, 16, 2, 16]     float32 \n",
-      "classification_heads.4                82980       -        [1, 36, 2, 16]     float32 \n",
-      "regression_heads.5                    36880       -        [1, 16, 1, 8]      float32 \n",
-      "classification_heads.5                82980       -        [1, 36, 1, 8]      float32 \n",
+      "regression_heads.0.0                  512         513      [1, 256, 32, 256]  float32 \n",
+      "regression_heads.0.1                  -           -        [1, 256, 32, 256]  float32 \n",
+      "regression_heads.0.2                  1180160     -        [1, 512, 32, 256]  float32 \n",
+      "regression_heads.0.3                  1024        1025     [1, 512, 32, 256]  float32 \n",
+      "regression_heads.0.4                  -           -        [1, 512, 32, 256]  float32 \n",
+      "regression_heads.0.5                  110616      -        [1, 24, 32, 256]   float32 \n",
+      "classification_heads.0.0              512         513      [1, 256, 32, 256]  float32 \n",
+      "classification_heads.0.1              -           -        [1, 256, 32, 256]  float32 \n",
+      "classification_heads.0.2              1180160     -        [1, 512, 32, 256]  float32 \n",
+      "classification_heads.0.3              1024        1025     [1, 512, 32, 256]  float32 \n",
+      "classification_heads.0.4              -           -        [1, 512, 32, 256]  float32 \n",
+      "classification_heads.0.5              248886      -        [1, 54, 32, 256]   float32 \n",
+      "regression_heads.1.0                  512         513      [1, 256, 16, 128]  float32 \n",
+      "regression_heads.1.1                  -           -        [1, 256, 16, 128]  float32 \n",
+      "regression_heads.1.2                  1180160     -        [1, 512, 16, 128]  float32 \n",
+      "regression_heads.1.3                  1024        1025     [1, 512, 16, 128]  float32 \n",
+      "regression_heads.1.4                  -           -        [1, 512, 16, 128]  float32 \n",
+      "regression_heads.1.5                  110616      -        [1, 24, 16, 128]   float32 \n",
+      "classification_heads.1.0              512         513      [1, 256, 16, 128]  float32 \n",
+      "classification_heads.1.1              -           -        [1, 256, 16, 128]  float32 \n",
+      "classification_heads.1.2              1180160     -        [1, 512, 16, 128]  float32 \n",
+      "classification_heads.1.3              1024        1025     [1, 512, 16, 128]  float32 \n",
+      "classification_heads.1.4              -           -        [1, 512, 16, 128]  float32 \n",
+      "classification_heads.1.5              248886      -        [1, 54, 16, 128]   float32 \n",
+      "regression_heads.2.0                  512         513      [1, 256, 8, 64]    float32 \n",
+      "regression_heads.2.1                  -           -        [1, 256, 8, 64]    float32 \n",
+      "regression_heads.2.2                  1180160     -        [1, 512, 8, 64]    float32 \n",
+      "regression_heads.2.3                  1024        1025     [1, 512, 8, 64]    float32 \n",
+      "regression_heads.2.4                  -           -        [1, 512, 8, 64]    float32 \n",
+      "regression_heads.2.5                  110616      -        [1, 24, 8, 64]     float32 \n",
+      "classification_heads.2.0              512         513      [1, 256, 8, 64]    float32 \n",
+      "classification_heads.2.1              -           -        [1, 256, 8, 64]    float32 \n",
+      "classification_heads.2.2              1180160     -        [1, 512, 8, 64]    float32 \n",
+      "classification_heads.2.3              1024        1025     [1, 512, 8, 64]    float32 \n",
+      "classification_heads.2.4              -           -        [1, 512, 8, 64]    float32 \n",
+      "classification_heads.2.5              248886      -        [1, 54, 8, 64]     float32 \n",
+      "regression_heads.3.0                  512         513      [1, 256, 4, 32]    float32 \n",
+      "regression_heads.3.1                  -           -        [1, 256, 4, 32]    float32 \n",
+      "regression_heads.3.2                  1180160     -        [1, 512, 4, 32]    float32 \n",
+      "regression_heads.3.3                  1024        1025     [1, 512, 4, 32]    float32 \n",
+      "regression_heads.3.4                  -           -        [1, 512, 4, 32]    float32 \n",
+      "regression_heads.3.5                  110616      -        [1, 24, 4, 32]     float32 \n",
+      "classification_heads.3.0              512         513      [1, 256, 4, 32]    float32 \n",
+      "classification_heads.3.1              -           -        [1, 256, 4, 32]    float32 \n",
+      "classification_heads.3.2              1180160     -        [1, 512, 4, 32]    float32 \n",
+      "classification_heads.3.3              1024        1025     [1, 512, 4, 32]    float32 \n",
+      "classification_heads.3.4              -           -        [1, 512, 4, 32]    float32 \n",
+      "classification_heads.3.5              248886      -        [1, 54, 4, 32]     float32 \n",
+      "regression_heads.4.0                  512         513      [1, 256, 2, 16]    float32 \n",
+      "regression_heads.4.1                  -           -        [1, 256, 2, 16]    float32 \n",
+      "regression_heads.4.2                  1180160     -        [1, 512, 2, 16]    float32 \n",
+      "regression_heads.4.3                  1024        1025     [1, 512, 2, 16]    float32 \n",
+      "regression_heads.4.4                  -           -        [1, 512, 2, 16]    float32 \n",
+      "regression_heads.4.5                  73744       -        [1, 16, 2, 16]     float32 \n",
+      "classification_heads.4.0              512         513      [1, 256, 2, 16]    float32 \n",
+      "classification_heads.4.1              -           -        [1, 256, 2, 16]    float32 \n",
+      "classification_heads.4.2              1180160     -        [1, 512, 2, 16]    float32 \n",
+      "classification_heads.4.3              1024        1025     [1, 512, 2, 16]    float32 \n",
+      "classification_heads.4.4              -           -        [1, 512, 2, 16]    float32 \n",
+      "classification_heads.4.5              165924      -        [1, 36, 2, 16]     float32 \n",
+      "regression_heads.5.0                  512         513      [1, 256, 1, 8]     float32 \n",
+      "regression_heads.5.1                  -           -        [1, 256, 1, 8]     float32 \n",
+      "regression_heads.5.2                  1180160     -        [1, 512, 1, 8]     float32 \n",
+      "regression_heads.5.3                  1024        1025     [1, 512, 1, 8]     float32 \n",
+      "regression_heads.5.4                  -           -        [1, 512, 1, 8]     float32 \n",
+      "regression_heads.5.5                  73744       -        [1, 16, 1, 8]      float32 \n",
+      "classification_heads.5.0              512         513      [1, 256, 1, 8]     float32 \n",
+      "classification_heads.5.1              -           -        [1, 256, 1, 8]     float32 \n",
+      "classification_heads.5.2              1180160     -        [1, 512, 1, 8]     float32 \n",
+      "classification_heads.5.3              1024        1025     [1, 512, 1, 8]     float32 \n",
+      "classification_heads.5.4              -           -        [1, 512, 1, 8]     float32 \n",
+      "classification_heads.5.5              165924      -        [1, 36, 1, 8]      float32 \n",
       "<top-level>:0                         261760      -        [1, 4, 65440]      float32 \n",
       "<top-level>:1                         -           -        [1, 4, 65440]      float32 \n",
       "---                                   ---         ---      ---                ---     \n",
-      "Total                                 40639816    21158    -                  -       \n",
+      "Total                                 55778632    39614    -                  -       \n",
       "\n",
-      "Epoch 0:   0%|                                           | 0/50 [00:00<?, ?it/s]"
+      "Epoch 0: 100%|██████████████████████████████████| 50/50 [01:19<00:00,  1.60s/it]\n",
+      "Evaluating on dataset:   0%|                             | 0/10 [00:00<?, ?it/s]"
      ]
     }
    ],
@@ -220,7 +275,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3815fb27",
+   "id": "4b306678",
    "metadata": {},
    "outputs": [],
    "source": []
