--- a/SSD/dataset_exploration/testing.ipynb
+++ b/SSD/dataset_exploration/testing.ipynb
@@ -2,10 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "1ab83ed9",
+   "execution_count": 3,
+   "id": "51531053",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'tops'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[0;32m/tmp/ipykernel_417160/4195849174.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mtops\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mconfig\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0minstantiate\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mLazyConfig\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mssd\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mutils\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mtqdm\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mtqdm\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mnumpy\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mpandas\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'tops'"
+     ]
+    }
+   ],
    "source": [
     "from tops.config import instantiate, LazyConfig\n",
     "from ssd import utils\n",
@@ -17,8 +29,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "05f95ee9",
+   "execution_count": 4,
+   "id": "0c8112b2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,8 +42,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "id": "e246a7a8",
+   "execution_count": 5,
+   "id": "03164745",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,8 +61,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "id": "177a450d",
+   "execution_count": 6,
+   "id": "26260c1a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,41 +88,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "id": "ab217e2c",
+   "execution_count": 7,
+   "id": "c135a51b",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "It looks like you are currently working on the server, with a 'working directory' in: /work/snotra/lautaror\n",
-      "\tIf you struggle with NTNU home directory becoming full, we recommend you to change the output directory to: /work/snotra/lautaror\n",
-      "\t /work/snotra/lautaror does not sync with NTNU HOME, and is a directory only located on the server.\n",
-      "\t To change the output directory of SSD, set save_in_work to True in the file configs/utils.py, in the function get_output_dir.\n",
-      "Saving SSD outputs to: outputs/\n",
-      "Found dataset directory in: /work/datasets/mnist_object_detection/train\n",
-      "Found dataset directory in: /work/datasets/mnist_object_detection/val\n",
-      "Found dataset directory in: /work/datasets/tdt4265_2022\n",
-      "Found dataset file in: /work/datasets/tdt4265_2022/train_annotations.json\n",
-      "Found dataset directory in: /work/datasets/tdt4265_2022\n",
-      "Found dataset file in: /work/datasets/tdt4265_2022/val_annotations.json\n",
-      "Label map is: {0: 'background', 1: 'car', 2: 'truck', 3: 'bus', 4: 'motorcycle', 5: 'bicycle', 6: 'scooter', 7: 'person', 8: 'rider'}\n",
-      "{'dataset': {'img_folder': '/work/datasets/tdt4265_2022', 'transform': '${train_cpu_transform}', 'annotation_file': '/work/datasets/tdt4265_2022/train_annotations.json', '_target_': <class 'ssd.data.tdt4265.TDT4265Dataset'>}, 'dataloader': {'dataset': '${..dataset}', 'num_workers': 4, 'pin_memory': True, 'shuffle': True, 'batch_size': '${...train.batch_size}', 'collate_fn': <function batch_collate at 0x7fda15e588b0>, 'drop_last': True, '_target_': <class 'torch.utils.data.dataloader.DataLoader'>}, 'gpu_transform': {'transforms': [{'mean': [0.4765, 0.4774, 0.2259], 'std': [0.2951, 0.2864, 0.2878], '_target_': <class 'ssd.data.transforms.gpu_transforms.Normalize'>}], '_target_': <class 'torchvision.transforms.transforms.Compose'>}}\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████████████████████████████████████████████████████████████████████████| 1604/1604 [00:14<00:00, 108.24it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Item counts Counter()\n"
+     "ename": "NameError",
+     "evalue": "name 'LazyConfig' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m/tmp/ipykernel_417160/967630956.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      9\u001b[0m     \u001b[0manalyze_something\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdataloader\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcfg\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 11\u001b[0;31m \u001b[0mmain\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m/tmp/ipykernel_417160/967630956.py\u001b[0m in \u001b[0;36mmain\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mmain\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m     \u001b[0mconfig_path\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"configs/tdt4265.py\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m     \u001b[0mcfg\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mget_config\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mconfig_path\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m     \u001b[0mdataset_to_analyze\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"train\"\u001b[0m  \u001b[0;31m# or \"val\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/tmp/ipykernel_417160/2194919297.py\u001b[0m in \u001b[0;36mget_config\u001b[0;34m(config_path)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mget_config\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mconfig_path\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m     \u001b[0mcfg\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mLazyConfig\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mconfig_path\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m     \u001b[0mcfg\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtrain\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbatch_size\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mcfg\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'LazyConfig' is not defined"
      ]
     }
    ],
@@ -132,7 +124,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "6ac1281d",
+   "id": "695e2389",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +137,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "33666aa3",
+   "id": "152e5203",
    "metadata": {},
    "outputs": [
     {
@@ -177,7 +169,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "6d1ad8e9",
+   "id": "d8b1bb77",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +186,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "40e6c575",
+   "id": "d2844179",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,7 +205,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "4feeffd4",
+   "id": "6fd35ed3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,7 +218,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "5384e6b3",
+   "id": "bb3da552",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,7 +232,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "49a70183",
+   "id": "713907e1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -251,7 +243,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "64c23452",
+   "id": "27e4286b",
    "metadata": {},
    "outputs": [
     {
@@ -280,7 +272,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "e9cad0d0",
+   "id": "e45e9af9",
    "metadata": {},
    "outputs": [
     {
@@ -309,7 +301,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "93f9ad95",
+   "id": "d62590f3",
    "metadata": {},
    "outputs": [
     {
@@ -342,7 +334,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "3facd8de",
+   "id": "7c867d20",
    "metadata": {},
    "outputs": [
     {
@@ -363,7 +355,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "8ce17238",
+   "id": "2ffee817",
    "metadata": {},
    "outputs": [
     {
@@ -466,7 +458,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "448c0a17",
+   "id": "25002276",
    "metadata": {},
    "outputs": [
     {
@@ -577,7 +569,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "f47744ee",
+   "id": "08aaa1c1",
    "metadata": {},
    "outputs": [
     {
